<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.somrandomteam.hacklondon2016.event.EventFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/eventAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/event_name"
            android:textSize="20dp"
            android:layout_below="@id/eventAvatar"/>

        <TextView
            android:id="@+id/eventId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/event_id"
            android:textSize="20dp"
            android:layout_below="@id/eventName"/>

        <TextView
            android:id="@+id/eventOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/event_org"
            android:textSize="20dp"
            android:layout_below="@id/eventId"/>

    </RelativeLayout>
</FrameLayout>
